--- a/css/index.css
+++ b/css/index.css
@@ -139,8 +139,11 @@ h3 {
   font-size: 62px;
   color: white;
 }
+ul {
+  list-style-type: circle;
+}
 .container {
-  width: 95%;
+  width: 70%;
   margin: auto;
 }
 header {
@@ -150,15 +153,15 @@ header {
   justify-content: space-between;
   padding-top: 20px;
   padding-bottom: 20px;
-  width: 70%;
-  margin: auto;
+  width: 100%;
 }
 header .infoBox {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   color: #1f1d8f;
-  padding-top: 100px;
+  padding-top: 179px;
+  padding-left: 15%;
 }
 header .infoBox .name {
   font-size: 40px;
@@ -174,4 +177,42 @@ header .initialBox {
   align-content: center;
   background-color: #1f1d8f;
   padding: 10%;
+}
+.flexc {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+.mainContent {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.mainContent .leftBoxes {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  color: #1f1d8f;
+  width: 15%;
+  font-size: 30px;
+  background-color: lightslategray;
+}
+.mainContent .rightBoxes {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 85%;
+}
+.mainContent .objContent {
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+.mainContent .sumContent {
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+.mainContent .expContent {
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
